This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

13-Mar-2002 (Lars Duening)  (3.3.420)
  - (xalloc.c, smalloc.c, configure) New configuration option
      '--enable-malloc-sbrk' to selectively allow the memory allocator to use
      sbrk() instead of malloc() where available (default is to allow sbrk()).
      The idea is to circumvent limitations some system put on sbrk().
      (suggested by Tomba)

12-Mar-2002 (Lars Duening)  (3.3.419)
  - (mapping.c, gcollect.c) The mapping GC forgot to mark the map-chain
       blocks as referenced (reported by Bardioc).

11-Mar-2002 (Lars Duening)  (3.3.418)
  - (structs.c) Removed a crasher caused by two uninitialized variables.
  - (mappings, gcollect.c) The GC can now collect mappings with hash
       parts.
  - (ptmalloc.c) More locking code - these should cover almost all
       cases (thanks, Gawain).

10-Mar-2002 (Lars Duening)  (3.3.417)
  - (prolang.y) Corrected the error handling when a struct member was
       duplicated and clashed with an inherited member (reported by
       Guandalug).
  - (prolang.y, structs, hash, efuns.c, interpret.c, sprintf.c)
       When a struct-defining program is recompiled, the compiler
       tries to reactivate the struct type objects if possible.

08-Mar-2002 (Lars Duening)  (3.3.416)
  - (swap.c, mapping) The swapper got out of sync when swapping mappings
       with destructed objects as keys. So far it was not a problem because
       mappings got compacted faster than they were swapped, and the swapper
       already refused to swap mappings with objects/closures used as keys
       in the condensed part. But with the new mapping compaction strategy
       a more thorough test became necessary.

07-Mar-2002 (Lars Duening)  (3.3.415)
  - (configure) New configuration option '--with-optimize' to select
       the optimization level in the generated Makefile: no, low,
       med, or high.