@@ -51,12 +51,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 420)
-(Parent-Version lpmud 3-3 419)
-(Version-Log "New configuration option '--enable-malloc-sbrk'.")
+(Project-Version lpmud 3-3 421)
+(Parent-Version lpmud 3-3 420)
+(Version-Log "Removed a build problem between MALLOC_CHECK and MALLOC_TRACE.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 13 Mar 2003 23:17:42 -0700")
+(Checkin-Time "Fri, 14 Mar 2003 14:51:01 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -93,7 +93,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.483 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.484 644))
   (HISTORY (lpmud/f/49_HISTORY 1.308 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -164,7 +164,7 @@
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.12 644))
   (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.48 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.31 644))
-  (src/driver.h (lpmud/f/36_driver.h 1.15.1.24 644))
+  (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
@@ -271,7 +271,7 @@
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.104 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
-  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.74 644))
+  (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.75 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
   (src/structs.c (lpmud/d/b/6_structs.c 1.10 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.1 644))
